fix: remove flickering when switching from login to register

--- a/body/login/input/styles.css
+++ b/body/login/input/styles.css
@@ -17,3 +17,8 @@
     border-radius: 1em;
     width: 90%;
 }
+
+#eye-icon {
+    width: 40px;
+    height: 40px;
+}
