--- a/body/login/styles.css
+++ b/body/login/styles.css
@@ -15,6 +15,7 @@
 
 .form {
     display: flex;
+    gap: 2em;
     flex-direction: column;
     justify-content: center;
     align-items: center;
@@ -23,8 +24,8 @@
 
 .login-title {
     font-size: 4em;
-    margin-bottom: 20px;
     color: #422F6B;
+    margin: 0;
 }
 
 .input-container {
@@ -36,7 +37,8 @@
 
 .question-text {
     font-size: 1em;
-    margin-top: 20px;
+    text-decoration: underline;
+    cursor: pointer;
 }
 
 .form-button {
