--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,6 @@
 body {
-    background-color:#CDCDC0;;
+    background-color:#CDCDC0;
+    margin: 0;
 }
 
 .vertical-entry{
